# robin-sparkless

./: .envrc  .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  COMPILATION_PROGRESS.md  COMPILATION_STATUS.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  LICENSE  MIGRATION_STATUS.md  Makefile  PARITY_STATUS.md  QUICKSTART.md  README-Python.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  ROADMAP.md  TEST_CREATION_GUIDE.md  audit.toml  deny.toml  docker-compose.jdbc.db2.yml  docker-compose.jdbc.mariadb.yml  docker-compose.jdbc.mssql.yml  docker-compose.jdbc.mysql.yml  docker-compose.jdbc.oracle.yml  docker-compose.jdbc.yml  docker-compose.yml  mkdocs.yml  mypy.ini  pyproject.toml  requirements-ci.txt  research.md  robin_sparkless.pyi  rust-toolchain.toml
.cargo/: audit.toml
.github/: PULL_REQUEST_1267.md
.github/workflows/: ci.yml  (+4 more)
benches/: filter_select_groupby.rs
crates/robin-sparkless-core/: Cargo.toml  README.md
crates/robin-sparkless-core/src/: config.rs  date_utils.rs  error.rs  expr.rs  jdbc_mapping.rs  lib.rs  path_security.rs  runtime_config.rs  schema.rs
crates/robin-sparkless-core/src/engine/: collected.rs  dataframe.rs  join.rs  mod.rs  plan.rs  reader.rs  session.rs
crates/robin-sparkless-expr/: Cargo.toml
crates/robin-sparkless-expr/src/: column.rs  functions.rs  lib.rs  type_coercion.rs
crates/robin-sparkless-polars/: Cargo.toml  README.md
crates/robin-sparkless-polars/src/: ansi.rs  column.rs  engine_backend.rs  error.rs  expr_ir.rs  functions.rs  jdbc.rs  lib.rs  schema.rs  schema_conv.rs  session.rs  traits.rs  type_coercion.rs  udf_context.rs  udf_registry.rs  udfs.rs
crates/robin-sparkless-polars/src/dataframe/: aggregations.rs  joins.rs  mod.rs  stats.rs  transformations.rs
crates/robin-sparkless-polars/src/delta/: mod.rs
crates/robin-sparkless-polars/src/functions/: column.rs  mod.rs  rest.rs  sort.rs  types.rs
crates/robin-sparkless-polars/src/jdbc/: db2.rs  mariadb.rs  mod.rs  mssql.rs  mysql.rs  oracle.rs  postgres.rs  sql_ident.rs  sqlite.rs
crates/robin-sparkless-polars/src/plan/: expr.rs  logical.rs  mod.rs
crates/robin-sparkless-polars/src/session/: builder.rs  mod.rs  reader.rs
crates/robin-sparkless-polars/src/sql/: mod.rs  translator.rs
crates/robin-sparkless-polars/src/udfs/: mod.rs  rest.rs
crates/spark-sql-parser/: Cargo.toml  README.md
crates/spark-sql-parser/src/: lib.rs
docs/: BEFORE_YOU_ADOPT.md  BUGS_AND_IMPROVEMENTS_PLAN.md  BUG_HUNT_PLAN.md  CLOSED_ISSUES_TEST_COVERAGE.md  COMPILATION_STATUS.md  CONVERTER_STATUS.md  CREATEDATAFRAME_GAPS.md  DATAFRAME_TEST_GUIDE.md  DEFERRED_SCOPE.md  DOC_INDEX.md  EMBEDDING.md  ENGINE_ARCHITECTURE.md  FAQ.md  FULL_BACKEND_ROADMAP.md  FULL_PARITY_ROADMAP.md  GAP_ANALYSIS_PYSPARK_4.md  GAP_ANALYSIS_PYSPARK_REPO.json  GAP_ANALYSIS_PYSPARK_REPO.md  GAP_ANALYSIS_SPARKLESS_3.28.md  IMPLEMENTATION_STATUS.md  INTEGRATION_TEST_GUIDE.md  JDBC_TESTING.md  LAZY_BACKEND_PLAN.md  LOGICAL_PLAN_FORMAT.md  MIGRATION_STATUS.md  PARITY_CHECK_SPARKLESS_3.28.md  PARITY_FUNCTIONS_EXPECTATIONS.md  PARITY_STATUS.md  PERSISTENCE_BETWEEN_SESSIONS.md  PERSISTENCE_GUIDE.md  PHASE15_GAP_LIST.md  POLARS_CRATE_ISOLATION.md  PORTED_TEST_EXPECTATIONS.md  PRODUCTION.md  PRODUCT_HISTORY.md  PR_WINDOW_BENCHMARK_1430.md  PYSPARK_4_PARITY_PLAN.md  PYSPARK_COMPAT_PROFILES.md  PYSPARK_DIFFERENCES.md  PYSPARK_MODE_TEST_FAILURES.md  (+42 more)
examples/: complex_filters.rs  demo.rs  embed_basic.rs  embed_readme.rs  jdbc_postgres.rs  quickstart_from_polars.rs
node/: Cargo.toml  index.js  package.json
node/src/: lib.rs
python/: Cargo.toml  README.md  pyproject.toml
python/sparkless/sparkless/: __init__.py  _cdf_helpers.py  _native.pyi  config.py  errors.py  functions.py  spark_types.py  window.py
python/sparkless/sparkless/core/: __init__.py
python/sparkless/sparkless/core/exceptions/: __init__.py  analysis.py  operation.py  validation.py
python/sparkless/sparkless/dataframe/: __init__.py  na.py
python/sparkless/sparkless/sql/: __init__.py  _native_math_stub.py  functions.py  types.py  utils.py  window.py
python/sparkless/sparkless/testing/: __init__.py  comparison.py  compat.py  fixtures.py  imports.py  jdbc.py  mode.py  plugin.py  session.py
python/src/: lib.rs
robin_sparkless/: __init__.py
scripts/: add_skips_to_failing.py  batch_regenerate_extracted.py  bench_native_speed.py  bench_robin_vs_sparkless.py  compare_signatures.py  create_failure_issues.py  create_issues_for_failures.py  export_pyspark_signatures.py  export_robin_signatures.py  extract_pyspark_api_from_repo.py  extract_pyspark_tests.py  extract_robin_api_from_source.py  fix_skip_indent.py  gap_analysis_pyspark_repo.py  parity_hunt.py  reskip_failed.py  run_doc_examples.py  run_window_benchmark.py  sparkless_parity_check.py  typecheck_strict.sh  unskip_and_run.py  unskip_issue_tests.py  unskip_report.json  verify_pyspark4_env.py  verify_pyspark_to_timestamp.py  write_signature_alignment_tasks.py
src/: arrow_conversion.rs  column.rs  config.rs  dataframe.rs  date_utils.rs  error.rs  execution.rs  expression.rs  functions.rs  lazy.rs  lib.rs  prelude.rs  schema.rs  session.rs  traits.rs  type_coercion.rs  udf_registry.rs  udfs.rs
tests/: BUG_LOG.md  __init__.py  common.rs  conftest.py  convert_sparkless_fixtures.py  core_dataframe.rs  dataframe_core.rs  delta_core.rs  error_handling.rs  expressions.rs  gen_pyspark_cases.py  groupby_orderby.rs  groupby_orderby_core.rs  io.rs  issue_235_filter_coercion.rs  issue_401_filter_column_expression.rs  issue_492_order_by_case_insensitive.rs  issue_540_order_by_nulls_first_last.rs  issue_541_with_field_struct.rs  issue_542_create_map.rs  issue_543_csv_infer_schema.rs  issue_544_cast_semantics.rs  issue_545_udf_expression.rs  issue_546_sql_aggregation_alias.rs  issue_547_string_functions_op.rs  issue_548_date_trunc_to_date_op.rs  issue_549_format_string_log_op.rs  issue_550_window_approx_count_distinct.rs  issue_551_union_type_coercion.rs  issue_552_join_inner_left_rows.rs  issue_553_empty_dataframe_schema_table.rs  issue_554_explode_op.rs  (+29 more)
(+1672 files in other folders)
