[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "robin-sparkless"
version = "0.1.1"
description = "PySpark-like DataFrame API in Rust (Polars backend), with Python bindings via PyO3"
readme = "README-Python.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Robin Sparkless contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[tool.maturin]
# Build the Rust lib with the pyo3 feature so the Python module is compiled.
# abi3 (py-limited-api) produces one wheel for Python 3.8+.
features = ["pyo3"]
py-limited-api = "cp38"
# Type stubs for static checkers (mypy, pyright).
include = ["robin_sparkless.pyi"]

[tool.mypy]
python_version = "3.8"
exclude = ["^target/", "^\\.venv/", ".*/site-packages/", ".*/\\.pyenv/"]
# Optional deps (pyspark, sparkless) may not be installed
[[tool.mypy.overrides]]
module = ["pyspark.*", "sparkless.*", "pytest.*", "_pytest.*"]
ignore_missing_imports = true
# Don't type-check pytest (uses 3.9+ syntax); skip following into it
[[tool.mypy.overrides]]
module = ["pytest", "_pytest", "pytest.*", "_pytest.*"]
follow_imports = "skip"

[tool.ruff]
target-version = "py38"
