[package]
name = "robin-sparkless-node"
version = "0.1.0"
edition = "2021"
description = "Node.js bindings for robin-sparkless (PySpark-like DataFrames on Polars)"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
robin-sparkless = { path = ".." }
napi = "2"
napi-derive = "2"
serde_json = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
