[package]
name = "sparkless-native"
version = "4.5.3"
edition = "2021"
description = "Native extension for sparkless Python package (robin-sparkless backend)."

[features]
default = ["delta"]
delta = ["robin-sparkless/delta"]
jdbc = ["robin-sparkless/jdbc"]
jdbc_mysql = ["robin-sparkless/jdbc_mysql"]
jdbc_mariadb = ["robin-sparkless/jdbc_mariadb"]
jdbc_mssql = ["robin-sparkless/jdbc_mssql"]
jdbc_oracle = ["robin-sparkless/jdbc_oracle"]
jdbc_db2 = ["robin-sparkless/jdbc_db2"]
sqlite = ["robin-sparkless/sqlite"]

[dependencies]
robin-sparkless = { path = "..", features = ["sql"] }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38", "generate-import-lib"] }
serde_json = "1.0"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[lib]
name = "sparkless_native"
crate-type = ["cdylib"]
