[package]
name = "robin-sparkless-core"
version = "0.15.1"
edition = "2024"
description = "Shared types, config, and error for robin-sparkless (no Polars)."
license = "MIT"
repository = "https://github.com/eddiethedean/robin-sparkless"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
