[package]
name = "robin-sparkless-core"
version = "4.13.2"
edition = "2024"
rust-version = "1.93"
description = "Shared types, config, and error for robin-sparkless (no Polars)."
license = "MIT"
repository = "https://github.com/eddiethedean/robin-sparkless"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3"
